--- a/_includes/world/2025/homepage_sections/social.html
+++ b/_includes/world/2025/homepage_sections/social.html
@@ -20,7 +20,7 @@
       <p>Terms &<br>Conditions</p>
     </a>
 
-    <a href="https://rubyonrails.org/conduct" target="_blank" class="social-card">
+    <a href="/world/2025/conduct" target="_blank" class="social-card">
       <img src="/assets/world/2025/icons/rules.png" alt="rules book icon"/>
       <p>Code of<br>Conduct</p>
     </a>
