--- a/_sass/common/_content.scss
+++ b/_sass/common/_content.scss
@@ -49,6 +49,14 @@
     line-height: 26px;
   }
 
+  .page-events & {
+    h2 {
+      color: $color-red;
+      font-size: 36px;
+      line-height: 34px;
+    }
+  }
+
   hr {
 
     background: rgba($color-black, 0.1);
@@ -318,6 +326,13 @@
     h6 {
       font-size: 26px;
       line-height: 28px;
+    }
+
+    .page-events & {
+      h2 {
+        font-size: 36px;
+        line-height: 34px;
+      }
     }
 
     p,
