Reduce video dimension to max width 80 percent

--- a/_sass/modules/_video.scss
+++ b/_sass/modules/_video.scss
@@ -47,7 +47,9 @@
   padding-bottom: 56.25%;
   height: 0;
   overflow: hidden;
-  max-width: 100%;
+  max-width: 80%;
+  margin: auto;
+  margin-top: 6px; 
 }
 .embed-container iframe,
 .embed-container object,
