--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://rubyonrails.org/world/2025" target="_blank">
-      800+ Rails devs are heading to Amsterdam this week for Rails World. See you there!
+    <a class="common-button--text" href="https://rubyonrails.org/world/" target="_blank">
+      Rails World is a wrap. See you next year in Austin!
     </a>
   </p>
 </div>
