--- a/_includes/world/2025/components/agenda_header.html
+++ b/_includes/world/2025/components/agenda_header.html
@@ -3,7 +3,7 @@
     <h1>Rails World 2025</h1>
     <h2>Official Agenda</h2>
     <p class="larger">
-      Here are the talks coming to the two Rails World stages. Registered attendees will be sent a link to the Rails World 2025 app with more detailed times and locations.
+      Here were the talks on the two Rails World stages. Registered attendees were sent a link to the Rails World 2025 app with more detailed times and locations.
     </p>
   </div>
 
