--- a/_includes/world/2025/homepage_sections/speaker_carousel.html
+++ b/_includes/world/2025/homepage_sections/speaker_carousel.html
@@ -2,7 +2,7 @@
 {% assign sorted_speakers = site.world_speakers | where_exp: 'item', 'item.path contains "2025"' | where: 'keynote', false | sort: 'first_name' %}
 
 <div class="section speakers-container title-center">
-  <h2>This year's speakers</h2>
+  <h2>2025 speakers</h2>
 
   <div class="carousel-container">
     <img class="carousel-arrow left" src="/assets/world/2025/icons/chevron.svg" alt="go left on the carousel">
