--- a/_includes/world/2025/homepage_sections/sponsors.html
+++ b/_includes/world/2025/homepage_sections/sponsors.html
@@ -6,7 +6,7 @@
       <div></div>
       <div>
         <p class="larger">
-          Below are all of the companies who are bringing Rails World to life this year for a <span class="bold">global audience of Rails enthusiasts</span>, developers, and maintainers.
+          These companies brought Rails World to life this year for a <span class="bold">global audience of Rails enthusiasts</span>, developers, and maintainers.
         </p>
       </div>
     </div>
