--- a/_includes/world/2025/homepage_sections/hero_banner.html
+++ b/_includes/world/2025/homepage_sections/hero_banner.html
@@ -14,7 +14,7 @@
 
   <div class="logo-container">
     <img src="/assets/world/2025/logos/RW25_logo-white-square-dated.png" alt="Rails World 2025 Logo" id="logo-world-2025" />
-    <a href="#" class="button-primary disabled"><span>Sold out</span></a>
+    <a href="https://youtu.be/gcwzWzC7gUA?si=XMH0uUruRxu7WDVK" class="button-primary disabled"><span>Watch Keynote</span></a>
   </div>
 
   <div class="floating-hexagons-container right-side">
