--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://rubyonrails.org/world/" target="_blank">
-      Rails World is a wrap. See you next year in Austin!
+    <a class="common-button--text" href="https://youtu.be/gcwzWzC7gUA?si=XMH0uUruRxu7WDVK" target="_blank">
+      Watch the Rails World 2025 Opening Keynote here.
     </a>
   </p>
 </div>
