Post-Rails World updates (#561)
* Post-Rails World updates

* Update banner.html

* Update announcements.yml

* Update rails_at_scale.html

* Update speakers.html

* Update agenda_header.html

* Update speaker_carousel.html

* Update sponsors.html

* Update hero_banner.html

* Update banner.html

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://rubyonrails.org/world/2025" target="_blank">
-      800+ Rails devs are heading to Amsterdam this week for Rails World. See you there!
+    <a class="common-button--text" href="https://youtu.be/gcwzWzC7gUA?si=XMH0uUruRxu7WDVK" target="_blank">
+      Watch the Rails World 2025 Opening Keynote here.
     </a>
   </p>
 </div>
