--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://youtu.be/gcwzWzC7gUA?si=XMH0uUruRxu7WDVK" target="_blank">
-      Watch the Rails World 2025 Opening Keynote here.
+    <a class="common-button--text" href="https://www.youtube.com/playlist?list=PLHFP2OPUpCebhAv1ZWb_978cTl1o-yue-" target="_blank">
+      All Rails World 2025 talks now on YouTube.
     </a>
   </p>
 </div>
