Cookpad Case Study
- Cookpad Case study laid out with content
- Images optimized to WebP format
- `text-wrap: balance` applied to common-headline to help make headlines avoid widows and orphans.
- Link from Case Studies area on Docs Home

--- a/_sass/common/_headline.scss
+++ b/_sass/common/_headline.scss
@@ -1,8 +1,8 @@
 .common-headline {
-
   color: $color-black;
   font-size: 18px;
   line-height: 24px;
+  text-wrap: balance;
 
   h1 {
     color: $color-red;
