Update banner.html for podcast

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <div class="banner text--align-center">
   <p>
-    <a class="common-button--text" href="https://www.youtube.com/playlist?list=PLHFP2OPUpCebhAv1ZWb_978cTl1o-yue-" target="_blank">
-      All Rails World 2025 talks now on YouTube.
+    <a class="common-button--text" href="https://podcast.rubyonrails.org/" target="_blank">
+      Listen to the latest episode of the 'On Rails' podcast, hosted by Robby Russell.
     </a>
   </p>
 </div>
