--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,41 +3,42 @@
 
 @charset 'utf-8';
 
-@import 'base/reset';
-@import 'base/variables';
-@import 'base/fonts';
-@import 'base/mixins';
-@import 'base/body';
-@import 'base/container';
-@import 'base/highlight';
+@import "base/reset";
+@import "base/variables";
+@import "base/fonts";
+@import "base/mixins";
+@import "base/body";
+@import "base/container";
+@import "base/highlight";
 
-@import 'common/background';
-@import 'common/border';
-@import 'common/button';
-@import 'common/code';
-@import 'common/content';
-@import 'common/gradient';
-@import 'common/headline';
-@import 'common/padding';
-@import 'common/shape';
+@import "common/background";
+@import "common/border";
+@import "common/button";
+@import "common/code";
+@import "common/content";
+@import "common/gradient";
+@import "common/headline";
+@import "common/padding";
+@import "common/shape";
 
-@import 'modules/banner';
-@import 'modules/blog';
-@import 'modules/cards';
-@import 'modules/company';
-@import 'modules/core';
-@import 'modules/cornerribbon';
-@import 'modules/docs';
-@import 'modules/example';
-@import 'modules/features';
-@import 'modules/footer';
-@import 'modules/heading';
-@import 'modules/icon';
-@import 'modules/language';
-@import 'modules/layout';
-@import 'modules/nav';
-@import 'modules/notification';
-@import 'modules/post';
-@import 'modules/text';
-@import 'modules/trusted';
-@import 'modules/video';
+@import "modules/banner";
+@import "modules/blog";
+@import "modules/cards";
+@import "modules/company";
+@import "modules/core";
+@import "modules/cornerribbon";
+@import "modules/docs";
+@import "modules/events";
+@import "modules/example";
+@import "modules/features";
+@import "modules/footer";
+@import "modules/heading";
+@import "modules/icon";
+@import "modules/language";
+@import "modules/layout";
+@import "modules/nav";
+@import "modules/notification";
+@import "modules/post";
+@import "modules/text";
+@import "modules/trusted";
+@import "modules/video";
